<resources>
    <string name="app_name">NUMAD21Su_LilyBessette</string>
    <string name="pressed_button_text">Pressed: </string>
    <string name="clicky">Clicky</string>
    <string name="ClickyClicky">Clicky Clicky</string>
    <string name="link_collector">Link Collector</string>
    <string name="locator">Locator</string>
    <string name="about">About</string>
    <string name="email">bessette.l@northeastern.edu</string>
    <string name="name">Lily Bessette</string>
    <string name="Back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="link_add_error">Error - Link not saved</string>
    <string name="link_add_confirm">Link Added Successfully</string>
    <string name="add_link">Add Link</string>
    <string name="link_name">Link Name</string>
    <string name="link_url">Link URL</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="lat_none">Unavailable</string>
    <string name="long_none">Unavailable</string>
    <string name="location_access_required">Location access required.</string>
    <string name="confirm">Confirm</string>
    <string name="permission_rationale">Location permission required to view latitude and longitude.</string>
    <string name="ok">Ok</string>
    <string name="location_tracking_off">Location provider disabled. Please enable location tracking in settings and restart the application.</string>
    <string name="location_already_denied">Location permission already denied. Enable in settings.</string>
    <string name="drug_name">Enter Medication Name</string>
    <string name="drug_input_error">Enter medication to look up.</string>
    <string name="enter_search_criteria">Enter Search Criteria</string>
    <string name="enter_medication_name">Medication Name:  </string>
    <string name="enter_drug_form">Dosage Form:  </string>
    <string name="enter_brand_generic">Generic/Brand Name:  </string>
    <string name="search_rx">Confirm Search</string>
    <string name="service">At Your Service</string>
    <string name="enter_product_ndc">Product NDC:  </string>
    <string name="enter_active_ingredients">Active Ingredients:  </string>
    <string name="enter_pharm_class_epc">Pharmaceutical Class:  </string>
    <string name="enter_manufacturer_name">Manufacturer:  </string>
    <string name="enter_routes">Routes of Administration:  </string>
    <string name="enter_product_type">Product Type:  </string>
    <string name="search_openfda">Search for Medications in openFDA</string>
    <string name="execute_search">Search openFDA</string>
    <string name="search_error">No results to display. Please retry.</string>


    <string-array name="brandgenericspinner">
        <item>GENERIC NAME</item>
        <item>BRAND NAME</item>
    </string-array>


    <string-array name="drugformspinner">
        <item>AEROSOL</item>
        <item>CAPSULE</item>
        <item>CHEWABLE</item>
        <item>CREAM</item>
        <item>INHALANT</item>
        <item>INJECTION</item>
        <item>OINTMENT</item>
        <item>LIQUID</item>
        <item>LOTION</item>
        <item>POWDER</item>
        <item>TABLET</item>
    </string-array>

</resources>